--- a/css/styles.scss
+++ b/css/styles.scss
@@ -29,3 +29,23 @@
         font-size: 1.5rem;
     }
 }
+
+main {
+    position: absolute;
+    width   : 100vw;
+    height  : 100vh;
+    top     : 0;
+    left    : 0;
+}
+
+.jumbo-slider__nav-link {
+    text-transform: uppercase;
+
+    span {
+        text-transform: capitalize;
+    }
+
+    &:last-of-type {
+        text-transform: none;
+    }
+}
