--- a/css/styles.css
+++ b/css/styles.css
@@ -3,19 +3,27 @@
   --white: #eee;
   --black: #000;
   --dark: rgb(29, 29, 29);
-  --fluorescent: rgb(15, 235, 33);
+  --fluorescent: #03fc7f;
   --heavy: 700;
   --large: 15rem;
   --import: "Chakra Petch", sans-serif;
 }
 
+body {
+  background-color: transparent;
+}
+
 .page-header {
   background-color: var(--dark);
-  width: 100%;
+  width: 100vw;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 20px;
+  z-index: 5;
+  position: absolute;
+  position: fixed;
+  z-index: 10;
 }
 .page-header a {
   color: var(--white);
@@ -26,20 +34,184 @@
   font-size: 1.5rem;
 }
 
-main {
-  position: absolute;
+main .jumbo-slider {
+  background-color: var(--dark);
+}
+main .jumbo-slider__slide {
   width: 100vw;
   height: 100vh;
+  position: relative;
+  background-color: var(--dark);
+}
+main .jumbo-slider__slide__container {
+  position: absolute;
+  left: 20%;
+  top: 0;
+}
+main .jumbo-slider__slide-bg {
+  height: 100vh;
+  width: 100%;
+  background-position: center;
+  background-size: cover;
+  opacity: 0;
+  filter: saturate(1);
+  transition: opacity 0.1s ease-in-out;
+}
+main .jumbo-slider__slide-info {
+  position: absolute;
   top: 0;
   left: 0;
+  margin-left: 15%;
+  height: 100%;
+  height: 100vh;
+  background-color: rgba(202, 194, 150, 0.548);
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  justify-content: center;
+  align-items: start;
+  flex-direction: column;
+  padding: 0 2%;
+  background-color: var(--dark);
+  color: var(--dark);
 }
-
-.jumbo-slider__nav-link {
+main .jumbo-slider__slide-number, main .jumbo-slider__slide-title {
+  font-family: var(--import);
+  background-color: transparent;
+}
+main .jumbo-slider__slide-number {
+  font-size: 20rem;
+  font-weight: 700;
+  transform: translateX(100px);
+  transition: transform 0.5s ease-in-out;
+}
+main .jumbo-slider__slide-title {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  font-size: 3rem;
   text-transform: uppercase;
+  padding: 5px;
+  margin-bottom: 2rem;
+  display: inline-table;
+  transform: translateX(100px);
+  transition: transform 0.5s ease-in-out 0.3s;
 }
-.jumbo-slider__nav-link span {
+main .jumbo-slider__slide-description {
+  font-size: 1.2rem;
+  display: flex;
+  width: 100%;
+  transform: translateX(100px);
+  transition: transform 0.5s ease-in-out 0.3s;
+}
+main .jumbo-slider__slide-description .text-container {
+  width: 0;
+  flex-grow: 1;
+}
+main .jumbo-slider__slide-timer {
+  height: 4px;
+  width: 100vw;
+  width: 0;
+  background-color: var(--fluorescent);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  transition: width 6s ease-in-out;
+}
+main .jumbo-slider__slide--active .jumbo-slider__slide-bg {
+  opacity: 1;
+  filter: saturate(0.1);
+  width: 100vw;
+  height: 100vh;
+}
+main .jumbo-slider__slide--active .jumbo-slider__slide-info {
+  background-color: var(--dark);
+}
+main .jumbo-slider__slide--active .jumbo-slider__slide-number {
+  transform: translateX(0);
+  color: var(--fluorescent);
+}
+main .jumbo-slider__slide--active .jumbo-slider__slide-title {
+  transform: translateX(0);
+  background-color: #000;
+  color: #eee;
+}
+main .jumbo-slider__slide--active .jumbo-slider__slide-description {
+  transform: translateX(0);
+}
+main .jumbo-slider__slide--active .jumbo-slider__slide-timer {
+  width: 100vw;
+}
+main .jumbo-slider__slide--active .jumbo-slider__slide-bg {
+  opacity: 1;
+  filter: saturate(1);
+  background-color: var(--dark);
+  background-color: transparent;
+  transition: opacity 0.2s ease-in-out, filter 0.5s ease-in-out;
+  filter: saturate(0.1);
+}
+main .jumbo-slider__slide--active .jumbo-slider__slide-info {
+  background-color: rgba(202, 194, 150, 0.18);
+}
+main .jumbo-slider__slide--active .jumbo-slider__slide-number {
+  transform: translateX(0);
+}
+main .jumbo-slider__slide--active .jumbo-slider__slide-title {
+  transform: translateX(0);
+}
+main .jumbo-slider__slide--active .jumbo-slider__slide-description {
+  transform: translateX(0);
+}
+main .jumbo-slider__slide--active .jumbo-slider__slide-timer {
+  width: 100vw;
+}
+main .jumbo-slider__slide--active .jumbo-slider__counter {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+main .jumbo-slider__slide--active .jumbo-slider__counter-circle {
+  height: 18px;
+  width: 18px;
+  border: 2px solid var(--fluorescent);
+  background-color: transparent;
+  border-radius: 50%;
+  margin: 4px 0;
+}
+main .jumbo-slider__slide--active .jumbo-slider__counter-circle--active {
+  background-color: var(--fluorescent);
+}
+main .jumbo-slider__slide--active .jumbo-slider__nav {
+  width: 40px;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  -ms-writing-mode: sideways-rl;
+      writing-mode: sideways-rl;
+}
+main .jumbo-slider__slide--active .jumbo-slider__nav-link {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: var(--white);
+  padding-top: 10px;
+  text-transform: uppercase;
   text-transform: capitalize;
+  text-transform: uppercase;
+  text-transform: uppercase;
+  margin: 20px 0;
+  font-weight: 400;
+  font-size: 1.2rem;
 }
-.jumbo-slider__nav-link:last-of-type {
-  text-transform: none;
+main .jumbo-slider__slide--active .jumbo-slider__nav-link--active {
+  color: var(--fluorescent);
 }/*# sourceMappingURL=styles.css.map */
